--- a/otp_codes/src/main/resources/application.properties
+++ b/otp_codes/src/main/resources/application.properties
@@ -3,3 +3,6 @@ db.username=${DB_UNAME}
 db.password=${DB_PWD}
 secretKey=${SECRET}
 expirationTime=${EXP_TIME}
+algorithm=HmacSHA1
+otp.length=6
+otp.time=30
